[LayoutNG] Fix min/max size of atomic inlines with -ve margins.

We were resolving %-margins during the min/max phase against
LayoutUnit::Max().

This was bad.

Now we explicitly set the percentage resolution sizes to zero.

Bug: 923279
Change-Id: I619cef6ee2e4c18ad3a9bc213442a9a63a515e87
Reviewed-on: https://chromium-review.googlesource.com/c/1427539
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Ian Kilpatrick <ikilpatrick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624909}
Former-commit-id: 081ceeb2f119bb9779582a6cc2e04d79efdb61b1